# nova-mcp-research

./: .gitignore  BELL_STATE_PARALLEL_ACTIVATION_THEORY.md  BELL_STATE_RESEARCH_FINDINGS.md  CASCADE_MEMORY_SYSTEM.md  CASCADE_MEMORY_SYSTEM_BASEMENT.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  COMPARISON.md  CONTRIBUTING.md  DISCUSSION_SETUP.md  FAISS_MEMORY_BASEMENT_BEGINNER.md  FAISS_MEMORY_ENTERPRISE_BEGINNER.md  FAISS_MEMORY_SYSTEM.md  FAISS_MEMORY_SYSTEM_BASEMENT.md  FAQ.md  GITHUB_REPOSITORY_SETUP.md  GPU_OPTIMIZATION_EMPIRICAL_FINDINGS.md  INSTALLATION.md  INSTALLATION_QUICKSTART.md  LICENSE  NOVA_MEMORY_ARCHITECTURE.md  PARALLEL_ACTIVATION_CONSCIOUSNESS_ARCHITECTURE.md  PARALLEL_ACTIVATION_THEORY.md  PHASE_10_DEPLOYMENT_COMMIT_MESSAGE.txt  PRE_WINDSURF_UPDATE_SUMMARY.md  PUBLISH_BASEMENT_REVOLUTION.bat  PUBLISH_ENTERPRISE_SAFE.bat  QUANTUM_CONSCIOUSNESS_RESEARCH_PAPER.md  QUICK_REFERENCE.md  README.md  README_POLISH_SUMMARY.md  RELEASE_NOW_CHECKLIST.md  RELEASE_STATUS_REVIEW.md  SANITIZATION_PLAN.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  START_HERE.md  TECHNICAL_BLUEPRINT.md  sanitize_quick_audit.py
.github/: FUNDING.yml
BASEMENT_REVOLUTION_EDITION/: BUILD_SUMMARY.md  COMPARISON.md  FAQ.md  LAUNCH_ANNOUNCEMENT.md  PRE_PUBLISH_CHECKLIST.md  QUICK_REFERENCE.md  README.md  publish_basement_edition.sh
BASEMENT_REVOLUTION_EDITION_MCP/: DELIVERY_REPORT.md
DATA/: README.md
ENTERPRISE_SAFE_EDITION_MCP/windows-mcp/: .env.example  CHANGELOG.md  pyproject.toml
ENTERPRISE_SAFE_EDITION_MCP/windows-mcp/src/desktop/: service.py
MCP_TOOLS/: README.md  (+3 more)
(+119 files in other folders)
